update for bdbase.fr site

--- a/src/BDTranslations.Config
+++ b/src/BDTranslations.Config
@@ -9,16 +9,16 @@
     <EN>Error !</EN>
 </T0002>
 <T0003>
-    <FR>Le fichier BD2_Rename_Log.txt est trop grand. Confirmez le remplacement</FR>
-    <EN>The file BD2_Rename_Log.txt is too big. Confirm cleaning </EN>
+    <FR>Le fichier BDbase_Rename_Log.txt est trop grand. Confirmez le remplacement</FR>
+    <EN>The file BDbase_Rename_Log.txt is too big. Confirm cleaning </EN>
 </T0003>
 <T0004>
     <FR>Fichier de Log</FR>
     <EN>Rename Log File</EN>
 </T0004>
 <T0005>
-    <FR>Le fichier BD2_Debug_Log.txt est trop grand. Confirmez le remplacement</FR>
-    <EN>The file BD2_Debug_Log.txt is too big. Confirm cleaning </EN>
+    <FR>Le fichier BDbase_debug_log.txt est trop grand. Confirmez le remplacement</FR>
+    <EN>The file BDbase_debug_log.txt is too big. Confirm cleaning </EN>
 </T0005>
 <T0006>
     <FR>Fichier de Log</FR>
@@ -405,8 +405,8 @@
     <EN>** Comic book's synopsis not found !</EN>
 </T0101>
 <T0102>
-    <FR>Coller le lien internet de l'album provenant de www.bedetheque.com</FR>
-    <EN>Paste comic book's web link from www.bedetheque.com</EN>
+    <FR>Coller le lien internet de l'album provenant de www.bdbase.fr</FR>
+    <EN>Paste comic book's web link from www.bdbase.fr</EN>
 </T0102>
 <T0103>
     <FR>Scrape directement un lien</FR>
@@ -533,8 +533,8 @@
     <EN>Pick a Mag for </EN>
 </T0133>
 <T0134>
-    <FR>Coller le lien de la revue depuis www.bedetheque.com</FR>
-    <EN>Paste magazine link from www.bedetheque.com</EN>
+    <FR>Coller le lien de la revue depuis www.bdbase.fr</FR>
+    <EN>Paste magazine link from www.bdbase.fr</EN>
 </T0134>
 <T0135>
     <FR>Numéro de la revue</FR>
