--- a/src/Package.ini
+++ b/src/Package.ini
@@ -1,6 +1,6 @@
-Name        = Bedetheque Scraper 2
+Name        = BDbase Scraper
 Author      = Original work from Franck, revised by Mizio66, modified by kiwi13 & maforget
 Version     = 6.04
-Description = Scrape data from Bedetheque.com for French BD
+Description = Scrape data from BDbase.fr for French BD
 KeepFiles   = App.Config
-Image       = BD2.png
+Image       = BDbase.png
